tests/game_logic/snapshots/actions__field_after_rotate_right_over_bounds.snap
---
created: "2019-09-18T11:15:46.686932904Z"
creator: insta@0.8.1
source: tests/game_logic/actions.rs
expression: g.to_playable_string()
---
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
2222000000

