tests/game_logic/snapshots/actions__field_after_switch_block_back_to_i.snap
---
created: "2019-09-18T11:15:47.084349964Z"
creator: insta@0.8.1
source: tests/game_logic/actions.rs
expression: g.to_playable_string()
---
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0444400000
1111000000

