tests/game_logic/snapshots/actions__field_after_switch_block_to_l.snap
---
created: "2019-09-18T11:15:47.019231149Z"
creator: insta@0.8.1
source: tests/game_logic/actions.rs
expression: g.to_playable_string()
---
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0004000000
0444000000
1111000000

