tests/game_logic/snapshots/actions__field_after_switch_block_to_t.snap
---
created: "2019-09-18T11:15:46.905631093Z"
creator: insta@0.8.1
source: tests/game_logic/actions.rs
expression: g.to_playable_string()
---
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0400000000
4440000000
1111000000

